Added in second collection connections
