# routes/index.js
@@ -9,5 +9,6 @@ router.use('/api-doc', require('./swagger'));
 // points route to movies.js
 router.use('/movies', require('./movies'));
 
+router.use('/tvshows', require('./tvshows'));
 
 module.exports = router;
